--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,15 @@ a {
 * {
   box-sizing: border-box;
 }
+
+body.dark-mode {
+  background-color: #121212;
+  color: #fff;
+  transition: 0.15s all ease-in-out;
+}
+
+body.light-mode {
+  background-color: #fff;
+  color: #121212;
+  transition: 0.5s all ease-in-out;
+}
