--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -7,6 +7,7 @@ $light-mode-font-color: #000080;
 $dark-mode-font-color: #FFFEFE;
 
 /* accent colors */
+$light-accent-color: #9F75EB;
 
 /* font sizes */
 $base-font-size: 1rem;
