--- a/styles/components/_toggle.scss
+++ b/styles/components/_toggle.scss
@@ -1,27 +1,22 @@
 button {
-  height: 2em;
-  width: 10em;
-  border: none;
-  font-size: 1.25rem;
-
-  &:focus {
-    outline: medium;
-    outline-color: red;
-  }
+  width: 9rem;
+  height: 3rem;
+  background-color: rgba($light-mode-background, 1.0);
+  border: 0;
+  border-radius: 40px;
+  font-size: $h6;
 }
 
 .light-mode {
   button {
-    background: #2f2346;
-    color: white;
-    font-size: 2em;
+    background-color: $dark-mode-background;
+    color: $dark-mode-font-color;
   }
 }
 
 .dark-mode {
   button {
-    background: #9F75EB;
-    color: black;
-    font-size: 2em;
+    background-color: $light-mode-background;
+    color: $dark-mode-background;
   }
 }
