--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,9 +1,3 @@
-@import './_variables.scss';
-
-@import './components/_body.scss';
-@import './components/_toggle.scss';
-@import './components/_main.scss';
-
 html,
 body {
   padding: 0;
@@ -19,4 +13,16 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+body.dark-mode {
+  background-color: #121212;
+  color: #fff;
+  transition: 0.15s all ease-in-out;
+}
+
+body.light-mode {
+  background-color: #fff;
+  color: #121212;
+  transition: 0.15s all ease-in-out;
 }
