Builds out header component

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Bad+Script&family=Source+Sans+Pro:wght@300;600&display=swap');
+
 * {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  // font-family: -apple-system, BlinkMacSystemFont, 'Source Sans Pro', Oxygen,
+  //   Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Source Sans Pro', Arial, Helvetica, sans-serif;
   box-sizing: border-box;
 }
 
